--- a/src/app/entities/characters/character-list/character-list.component.html
+++ b/src/app/entities/characters/character-list/character-list.component.html
@@ -1,3 +1,5 @@
-<section>
-  
+<section class="p-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 bg-gray-50">
+  <ng-container *ngFor="let character of characters$ | async; index as i; trackBy: trackByFn">
+    <app-character-card [data]="character"></app-character-card>
+  </ng-container>
 </section>
