--- a/src/app/entities/characters/character-card/character-card.component.html
+++ b/src/app/entities/characters/character-card/character-card.component.html
@@ -1,28 +1,31 @@
-<div class="bg-white group transition ease-in-out duration-200 flex p-2 border cursor-pointer rounded-md hover:shadow-md">
+<div
+  *ngIf="data"
+  class="bg-white group transition ease-in-out duration-200 flex p-2 border cursor-pointer rounded-md hover:shadow-md"
+>
   <div class="flex-none">
-    <img [src]="data?.image" alt="" class="w-32 h-32 rounded-t-lg">
-    <div class="font-bold text-center bg-green-300 rounded-b-lg">{{ data?.species }}</div>
+    <img [src]="data.image" alt="" class="w-32 h-32 rounded-t-lg">
+    <div class="font-bold text-center bg-green-300 rounded-b-lg">{{ data.species }}</div>
   </div>
 
   <div class="flex-1 p-3 pb-0">
-    <div class="font-bold text-xl group-hover:text-green-500">{{ data?.name }}</div>
+    <div class="font-bold text-xl group-hover:text-green-500 mb-1">{{ data.name }}</div>
 
-    <span class="py-1 px-2 rounded-md text-white" [class]="
-          data?.status === 'Alive' ? 'bg-blue-500' :
-          data?.status === 'Dead' ? 'bg-red-500' :
+    <span class="py-1 px-2 rounded-md text-white font-bold" [class]="
+          data.status === 'Alive' ? 'bg-blue-500' :
+          data.status === 'Dead' ? 'bg-red-500' :
           'bg-gray-500'
         ">
-      {{ data?.status }}
+      {{ data.status }}
     </span>
 
     <div class="mt-2">
-      <div class="font-bold capitalize">last known location:</div>
-      <div>{{ data?.location?.name }}</div>
+      <div class="font-bold capitalize text-gray-500">last known location:</div>
+      <div class="text-sm text-gray-500">{{ data.location?.name }}</div>
     </div>
 
-    <div>
-      <div class="font-bold capitalize">first seen in:</div>
-      <div>{{ data?.origin?.name }}</div>
+    <div class="mt-2">
+      <div class="font-bold capitalize text-gray-500">first seen in:</div>
+      <div class="text-sm text-gray-500">{{ data.origin?.name }}</div>
     </div>
   </div>
 
