--- a/src/app/entities/characters/character-card/character-card.component.html
+++ b/src/app/entities/characters/character-card/character-card.component.html
@@ -1,13 +1,13 @@
 <div
   *ngIf="data"
-  class="bg-white group transition ease-in-out duration-200 flex p-2 border cursor-pointer rounded-md hover:shadow-md"
+  class="bg-white group transition ease-in-out duration-200 flex cursor-pointer rounded-md hover:shadow-md"
 >
-  <div class="flex-none">
-    <img [src]="data.image" alt="" class="w-32 h-32 rounded-t-lg">
-    <div class="font-bold text-center bg-green-300 rounded-b-lg">{{ data.species }}</div>
+  <div class="flex-none flex flex-col w-32">
+    <img [src]="data.image" alt="" class="flex-1 inset-0 object-cover rounded-tl-md" loading="lazy">
+    <div class="flex-none font-bold text-center bg-green-300 rounded-bl-md">{{ data.species }}</div>
   </div>
 
-  <div class="flex-1 p-3 pb-0">
+  <div class="flex-1 space-y-2 p-3 border rounded-r-md">
     <div class="font-bold text-xl group-hover:text-green-500 mb-1">{{ data.name }}</div>
 
     <span class="py-1 px-2 rounded-md text-white font-bold" [class]="
@@ -18,14 +18,14 @@
       {{ data.status }}
     </span>
 
-    <div class="mt-2">
+    <div class="leading-snug">
       <div class="font-bold capitalize text-gray-500">last known location:</div>
-      <div class="text-sm text-gray-500">{{ data.location?.name }}</div>
+      <p class="text-sm text-gray-500">{{ data.location?.name }}</p>
     </div>
 
-    <div class="mt-2">
+    <div class="leading-snug">
       <div class="font-bold capitalize text-gray-500">first seen in:</div>
-      <div class="text-sm text-gray-500">{{ data.origin?.name }}</div>
+      <p class="text-sm text-gray-500">{{ data.origin?.name }}</p>
     </div>
   </div>
 
