--- a/src/app/entities/characters/character-card/character-card.component.html
+++ b/src/app/entities/characters/character-card/character-card.component.html
@@ -3,7 +3,14 @@
   class="bg-white group transition ease-in-out duration-200 flex cursor-pointer rounded-md hover:shadow-md"
 >
   <div class="flex-none flex flex-col w-32">
-    <img [src]="data.image" alt="" class="flex-1 inset-0 object-cover rounded-tl-md" loading="lazy">
+    <img 
+      [src]="data.image" 
+      alt="" 
+      class="flex-1 inset-0 object-cover rounded-tl-md" 
+      loading="lazy" 
+      height="300" 
+      width="300"
+    >
     <div class="flex-none font-bold text-center bg-green-300 rounded-bl-md">{{ data.species }}</div>
   </div>
 
