--- a/src/app/entities/characters/character-card/character-card.component.html
+++ b/src/app/entities/characters/character-card/character-card.component.html
@@ -1,27 +1,36 @@
 <div
   *ngIf="data"
-  class="bg-white group transition ease-in-out duration-200 flex cursor-pointer rounded-md hover:shadow-md"
+  class="group flex cursor-pointer rounded-md bg-white transition duration-200 ease-in-out hover:shadow-md"
 >
-  <div class="flex-none flex flex-col w-32">
-    <img 
-      [src]="data.image" 
-      alt="" 
-      class="flex-1 inset-0 object-cover rounded-tl-md" 
-      loading="lazy" 
-      height="300" 
+  <div class="flex w-32 flex-none flex-col">
+    <img
+      [src]="data.image"
+      alt=""
+      class="inset-0 flex-1 rounded-tl-md object-cover"
+      loading="lazy"
+      height="300"
       width="300"
-    >
-    <div class="flex-none font-bold text-center bg-green-300 rounded-bl-md">{{ data.species }}</div>
+    />
+    <div class="flex-none rounded-bl-md bg-green-300 text-center font-bold">
+      {{ data.species }}
+    </div>
   </div>
 
-  <div class="flex-1 space-y-2 p-3 border rounded-r-md">
-    <div class="font-bold text-xl group-hover:text-green-500 mb-1">{{ data.name }}</div>
+  <div class="flex-1 space-y-2 rounded-r-md border p-3">
+    <div class="mb-1 text-xl font-bold group-hover:text-green-500">
+      {{ data.name }}
+    </div>
 
-    <span class="py-1 px-2 rounded-md text-white font-bold" [class]="
-          data.status === 'Alive' ? 'bg-blue-500' :
-          data.status === 'Dead' ? 'bg-red-500' :
-          'bg-gray-500'
-        ">
+    <span
+      class="rounded-md py-1 px-2 font-bold text-white"
+      [class]="
+        data.status === 'Alive'
+          ? 'bg-blue-500'
+          : data.status === 'Dead'
+          ? 'bg-red-500'
+          : 'bg-gray-500'
+      "
+    >
       {{ data.status }}
     </span>
 
@@ -35,5 +44,4 @@
       <p class="text-sm text-gray-500">{{ data.origin?.name }}</p>
     </div>
   </div>
-
 </div>
