--- a/src/app/entities/characters/character-detail/character-detail.component.html
+++ b/src/app/entities/characters/character-detail/character-detail.component.html
@@ -1,1 +1,56 @@
-<p>character-detail works!</p>
+<div class="m-4 flex">
+  <ng-container *ngIf="character$ | async as character">
+    <div class="max-w-xs flex-none">
+      <img
+        class="rounded-md"
+        [src]="character.image"
+        alt=""
+        width="300"
+        height="300"
+      />
+      <div>
+        <div class="my-4 text-xl font-bold capitalize">episodes:</div>
+        <div class="flex flex-wrap gap-4">
+          <a
+            class="w-12 cursor-pointer rounded-md border-2 border-slate-500 bg-slate-100 py-2 text-center font-bold hover:bg-slate-300"
+            *ngFor="let episode of character.episode"
+          >
+            {{ episode | slice : 40 }}
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="flex-1 space-y-3 p-4 text-lg">
+      <div>
+        <div class="font-bold capitalize">name:</div>
+        <p>{{ character.name }}</p>
+      </div>
+      <div>
+        <div class="font-bold capitalize">gender:</div>
+        <p>{{ character.gender }}</p>
+      </div>
+      <div>
+        <div class="font-bold capitalize">status:</div>
+        <p>{{ character.status }}</p>
+      </div>
+      <div>
+        <div class="font-bold capitalize">species:</div>
+        <p>{{ character.species }}</p>
+      </div>
+      <div>
+        <div class="font-bold capitalize">type:</div>
+        <p>{{ character.type || 'no type' }}</p>
+      </div>
+      <div>
+        <div class="font-bold capitalize">last seen in:</div>
+        <p>{{ character.location?.name }}</p>
+      </div>
+      <div>
+        <div class="font-bold capitalize">first seen in::</div>
+        <p>{{ character.origin?.name }}</p>
+      </div>
+    </div>
+  </ng-container>
+
+  <ng-container *ngIf="loading$ | async"> Loading... </ng-container>
+</div>
