chore: applied pagination on character list

--- a/src/app/core/components/paginator/paginator.component.html
+++ b/src/app/core/components/paginator/paginator.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center gap-4">
+<div class="inline-flex gap-4">
   <button
     [disabled]="currentPage <= 1"
     class="h-8 w-14 rounded-full bg-green-200 font-bold text-gray-700 hover:bg-green-300 disabled:bg-slate-300"
