--- a/src/app/entities/characters/character-list/character-list.component.html
+++ b/src/app/entities/characters/character-list/character-list.component.html
@@ -1,22 +1,32 @@
-<section
-  class="grid grid-cols-1 gap-4 bg-gray-50 p-4 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
->
-  <ng-container *ngIf="characters$ | async as characters">
-    <ng-container
-      *ngFor="
-        let character of characters.results;
-        index as i;
-        trackBy: trackByFn
-      "
+<ng-container *ngIf="characters$ | async as characters">
+  <section class="bg-gray-50 px-5 pb-10">
+    <div class="py-5 text-center">
+      <app-paginator
+        [currentPage]="currentPage"
+        [totalPages]="characters.info.pages"
+        (pageChanged)="getAllCharacters($event)"
+      />
+    </div>
+
+    <div
+      class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
     >
       <app-character-card
+        *ngFor="
+          let character of characters.results;
+          index as i;
+          trackBy: trackByFn
+        "
         [data]="character"
         (click)="navigateTo(character.id)"
       />
-    </ng-container>
-  </ng-container>
+    </div>
+  </section>
+</ng-container>
 
-  <ng-container *ngIf="loading$ | async">
-    <app-skeleton-card *ngFor="let _item of skeletonItems" />
-  </ng-container>
+<section
+  *ngIf="loading$ | async"
+  class="grid grid-cols-1 gap-4 bg-gray-50 p-4 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
+>
+  <app-skeleton-card *ngFor="let _item of skeletonItems" />
 </section>
