--- a/src/app/entities/characters/character-list/character-list.component.html
+++ b/src/app/entities/characters/character-list/character-list.component.html
@@ -29,7 +29,7 @@
 
 <ng-template #loading>
   <section
-    class="grid grid-cols-1 gap-4 bg-gray-50 px-5 pb-10 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
+    class="grid grid-cols-1 gap-4 bg-gray-50 p-5 pb-10 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
   >
     <app-skeleton-card *ngFor="let _item of [1, 2, 3, 4]" />
   </section>
