--- a/src/app/entities/characters/character-card/character-card.component.html
+++ b/src/app/entities/characters/character-card/character-card.component.html
@@ -16,9 +16,9 @@
     </div>
   </div>
 
-  <div class="flex-1 space-y-2 rounded-r-md border p-3">
+  <div class="min-w-0 flex-1 space-y-2 rounded-r-md border p-3">
     <div
-      class="mb-1 break-all text-xl font-bold group-hover:text-green-500 md:break-normal"
+      class="mb-1 overflow-hidden text-ellipsis whitespace-nowrap text-xl font-bold group-hover:text-green-500"
     >
       {{ data.name }}
     </div>
@@ -38,14 +38,18 @@
 
     <div class="leading-snug">
       <div class="font-bold capitalize text-gray-500">last known location:</div>
-      <p class="break-all text-sm text-gray-500 md:break-normal">
+      <p
+        class="overflow-hidden text-ellipsis whitespace-nowrap text-sm text-gray-500"
+      >
         {{ data.location?.name }}
       </p>
     </div>
 
     <div class="leading-snug">
       <div class="font-bold capitalize text-gray-500">first seen in:</div>
-      <p class="break-all text-sm text-gray-500 md:break-normal">
+      <p
+        class="overflow-hidden text-ellipsis whitespace-nowrap text-sm text-gray-500"
+      >
         {{ data.origin?.name }}
       </p>
     </div>
