--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<div class="p-4">
-  <ul class="flex gap-5">
+<div class="flex justify-between p-4">
+  <ul class="flex items-center gap-5">
     <li *ngFor="let route of routes">
       <a
         class="cursor-pointer rounded-md border-2 border-green-600 bg-green-100 py-1 px-2 font-bold uppercase text-green-700 hover:bg-green-200"
@@ -9,4 +9,5 @@
       </a>
     </li>
   </ul>
+  <app-search-bar></app-search-bar>
 </div>
