--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-navbar></app-navbar>
-<main class="h-screen bg-gray-50 p-5">
-  <router-outlet></router-outlet>
-</main>
+<div class="bg-gray-50">
+  <app-navbar></app-navbar>
+  <main class="m-auto min-h-screen max-w-screen-2xl px-4 pt-24 2xl:px-0">
+    <router-outlet></router-outlet>
+  </main>
+</div>
