--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,13 +1,15 @@
-<div class="flex justify-between p-4">
-  <ul class="flex items-center gap-5">
+<div
+  class="fixed z-10 flex w-full flex-wrap justify-between gap-y-5 bg-white p-4 shadow-md"
+>
+  <ul class="flex flex-wrap items-center gap-5">
     <li *ngFor="let route of routes">
       <a
-        class="cursor-pointer rounded-md border-2 border-green-600 bg-green-100 py-1 px-2 font-bold uppercase text-green-700 hover:bg-green-200"
+        class="block cursor-pointer rounded-md border-2 border-green-600 bg-green-100 py-1 px-2 font-bold uppercase text-green-700 hover:bg-green-200"
         [routerLink]="route.route"
       >
         {{ route.name }}
       </a>
     </li>
   </ul>
-  <app-search-bar></app-search-bar>
+  <app-search-bar class="w-full sm:w-auto"></app-search-bar>
 </div>
