--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div
-  class="fixed z-10 flex w-full flex-wrap justify-between gap-y-5 bg-white p-4 shadow-md"
+  class="fixed z-10 flex w-full flex-wrap items-center justify-between gap-y-5 bg-white px-4 py-2 shadow-md"
 >
   <ul class="flex flex-wrap items-center gap-5">
     <li *ngFor="let route of routes">
@@ -11,5 +11,8 @@
       </a>
     </li>
   </ul>
+
+  <img src="assets/images/logo.png" alt="" height="100" width="200" />
+
   <app-search-bar class="w-full sm:w-auto"></app-search-bar>
 </div>
