fix: fixed bug on pagination when is changed search text

--- a/src/app/core/components/search-bar/search-bar.component.html
+++ b/src/app/core/components/search-bar/search-bar.component.html
@@ -12,6 +12,7 @@
     placeholder="Search by name"
     spellcheck="false"
     autocomplete="off"
+    (keydown)="handleKeydown($event)"
     (input)="handleInput($event)"
   />
 </div>
